isFish fixed